[package]
name = "autokey-rs"
version = "0.1.0"
authors = ["John Williams <jrw@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.21.0"
serde = { version="^1.0.126", features=["derive"] }
#libc = "0.2.97"
x11 = { version="^2.18.1", features=["xrecord"] }
enumset = { version="^1.0.6", features=["serde"] }
json5 = "^0.3.0"
log = "^0.4.14"
env_logger = "^0.8.4"
syslog = "5.0.0"
lazy_static = "1.4.0"
